--- a/Github_tutorial.ipynb
+++ b/Github_tutorial.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Tutorial for applying UK Biobank organ aging models\n",
-    "This is a tutorial to apply organ aging models developed in Oh et. al. Nature Medicine 2025 (___), on independent Olink Explore (or later assay version) datasets."
+    "This is a tutorial to apply organ aging models developed in Oh et. al. Nature Medicine 2025 (https://www.nature.com/articles/s41591-025-03798-1), on independent Olink Explore (or later assay version) datasets."
    ]
   },
   {
