--- a/Github_tutorial.ipynb
+++ b/Github_tutorial.ipynb
@@ -641,7 +641,7 @@
     }
    ],
    "source": [
-    "#example dataset - 150 healthy, 150 disease\n",
+    "#example dataset - case control study of 150 healthy, 150 disease\n",
     "#your data should be preprocessed such that protein column names should match \n",
     "#the \"prot\" column in the protein metadata above\n",
     "df = pd.read_csv(\"../data_ukb/Github_mock_data.csv\")\n",
