--- a/Github_tutorial.ipynb
+++ b/Github_tutorial.ipynb
@@ -1377,7 +1377,7 @@
     "    #NPX protein levels should be z-scored\n",
     "    res['pred_Age']=dfprot[coefs.index].apply(stats.zscore).to_numpy().dot(coefs.to_numpy()) + interc    \n",
     "\n",
-    "    #calculate the age gap based on the predicted vs actual regression line from healthy controls\n",
+    "    #if you have a case-control study, calculate the age gap based on the predicted vs actual regression line from healthy controls. If you have a population average cohort, calculate the age gap based on the whole sample.\n",
     "    res_hc = res.loc[res.Diagnosis==\"Healthy\"]\n",
     "    mod = sm.OLS(res_hc['pred_Age'], sm.add_constant(res_hc[['Age']])).fit()\n",
     "    res['yhat'] = mod.predict(sm.add_constant(res[['Age']]))\n",
